--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,3 @@
-body {
-  /* background-image: url(../src/assets/img/fondo-de-cuadricula-digital-abstracto-negro.jpg); */
-  /* background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center; */
-}
-
 h1 {
   color: #66cdf2;
 }
@@ -28,4 +21,12 @@ h1 {
 }
 footer ul li a {
   color: black;
+}
+.selected {
+  border-radius: 15px;
+  background: radial-gradient(
+    circle,
+    rgba(200, 245, 225, 1) 0%,
+    rgba(235, 240, 245, 1) 100%
+  );
 }
